<resources>
    <string name="app_name">LyfeLine</string>
    <string name="lyfeline">LyfeLine</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="register_account">Register Account</string>
    <string name="create_a_lyfeline_account">Create a LyfeLine Account</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="title_activity_victim_gui">VictimGui</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_emt_gui">EmtGui</string>
    <string name="enter_city">Enter City</string>
    <string name="state">State</string>
    <string name="enter_state">Enter State</string>
    <string name="city">City</string>
    <string name="basic_information">Basic Information</string>
    <string name="emt_code">EMT Code</string>
    <string name="enter_emt_code">Enter EMT Code</string>
    <string name="todo">TODO</string>
    <string name="rescuee">Rescuee</string>
    <string name="emt">EMT</string>
    <string name="or">--------------------- OR ---------------------</string>
    <string name="contentDescription">TODO</string>
    <string name="google_maps_API_key">AIzaSyBmqx_v77BTVBbkWLtyQwZM2PIy2Dxr6PI</string>
    <string name="map">Map</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Firestore Strings -->
    <string name="collection_users">User</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>

</resources>
